--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -9,7 +9,7 @@
     gap: 20px;
     .line{
         width: 90%;
-        border: 1px solid #000000;
+        border: 1.5px solid #000000;
     }
     .footer-tarjetas{
         width: 90%;
@@ -34,7 +34,7 @@
         align-items: center;
         width: 90%;
         margin: auto;
-        padding: 10px 0px;
+        padding: 10px 0px 20px 0px;
         color: #000000;
         .footerDisen{
             a{
